<resources>
    <string name="app_name">Control Box</string>
    <string name="btn_reboot">Reboot</string>
    <string name="btn_reboot_recovery">Reboot to recovery</string>
    <string name="btn_reboot_soft">Softreboot</string>
    <string name="btm_main_rebooter">Rebooter</string>
    <string name="btn_main_lookandfeel"><![CDATA[Look & Feel]]></string>
    <string name="dpi_display">Current LCD Density: %dDPI</string>
    <string name="integerString" translatable="false">%d</string>
    <string name="dpi_header_text">LCD Density</string>
    <string name="btn_set_dpi">Set new DPI</string>
    <string name="dpi_description">Change your LCD density without any need to reboot!</string>
    <string name="activity_label_rebooter">Rebooter</string>
    <string name="activity_label_lookandfeel"><![CDATA[Look & Feel]]></string>
    <string name="btn_restart_systemui">Restart SystemUI</string>
    <string name="btn_shutdown">Shutdown</string>
    <string name="activity_label_multiuser">Multiuser</string>
    <string name="btn_main_multiuser">Multiuser</string>
    <string name="main_credits">Control Box is an app created by Deletescape (Till Kottmann)\n Copyright © 2016 Deletescape Media. All rights reserved.</string>
    <string name="no_root_msg">Your device is not rooted :(</string>
    <string name="multiuser_warning">WARNING:\nThese features not work on all devices! If you experience any problems after switching you will get back to your main user after a reboot!\nPlease also note that most devices only support up to 4 users and not more.</string>
    <string name="btn_switch_user">Switch to selected</string>
    <string name="dpiDisplay_demo_string">Current LCD Density: xxxDPI</string>
    <string name="txt_dpi_demo_value" translatable="false">xxx</string>
    <string name="add_user_header">Add User</string>
    <string name="btn_add_user">Add new user with name</string>
    <string name="btn_remove_user">Remove selected</string>
    <string name="remove_user_header">Switch / Remove</string>
    <string name="activity_label_credits">Credits</string>
    <string name="progress_remove_user_title">Removing user</string>
    <string name="progress_remove_user_description">This should not take too long...</string>
    <string name="progress_add_user_title">Adding user</string>
    <string name="progress_add_user_description">This should not take too long...</string>
    <string name="search_update">Search Update</string>
</resources>
