<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.deletescape.controlbox.LookAndFeel">

    <TextView
        android:id="@+id/dpiDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpi_description"
        android:layout_centerHorizontal="true"
        android:text="@string/dpiDisplay_demo_string" />

    <TextView
        android:id="@+id/header_dpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dpi_header_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txt_dpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/header_dpi"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dpiDisplay"
        android:ems="10"
        android:inputType="number"
        android:text="@string/txt_dpi_demo_value" />

    <Button
        android:id="@+id/btn_set_dpi"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txt_dpi"
        android:layout_toEndOf="@+id/header_dpi"
        android:background="@drawable/bg_button"
        android:onClick="setDPI"
        android:text="@string/btn_set_dpi" />

    <TextView
        android:id="@+id/dpi_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_dpi"
        android:layout_centerHorizontal="true"
        android:text="@string/dpi_description" />


</RelativeLayout>
