<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.deletescape.controlbox.ControlBox">


    <Button
        android:id="@+id/btn_main_rebooter"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="startRebooter"
        android:text="@string/btm_main_rebooter"
        android:background="@drawable/bg_button" />


    <Button
        android:id="@+id/btn_main_lookandfeel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_main_rebooter"
        android:layout_centerHorizontal="true"
        android:onClick="startLookAndFeel"
        android:text="@string/btn_main_lookandfeel"
        android:background="@drawable/bg_button" />

    <Button
        android:id="@+id/btn_main_multiuser"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_main_lookandfeel"
        android:layout_centerHorizontal="true"
        android:onClick="startMultiuser"
        android:text="@string/btn_main_multiuser"
        android:background="@drawable/bg_button" />

    <TextView
        android:id="@+id/main_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/main_credits" android:onClick="credits"/>

</RelativeLayout>